--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.mysql-connector-java-8.0.22.classpath}
+    ${libs.mysql-connector-java-8.0.22.classpath}:\
+    ${libs.mysql-connector-8.0.22.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
